Made some progress

--- a/style.scss
+++ b/style.scss
@@ -15,7 +15,7 @@
 }
 
 body {
-  background-image: linear-gradient(to bottom, midnightblue, steelblue);
+  background-image: linear-gradient(to bottom, indigo, midnightblue);
   color: #fff;
   width: 100vw;
   height: 100vh;
@@ -38,7 +38,7 @@ body {
 
       .list-items {
         background-color: #fff;
-        color: midnightblue;
+        color: indigo;
         text-align: center;
         width: 100%;
         padding: 5px 0;
