--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background-image: linear-gradient(to bottom, midnightblue, steelblue);
+  background-image: linear-gradient(to bottom, indigo, midnightblue);
   color: #fff;
   width: 100vw;
   height: 100vh;
@@ -43,7 +43,7 @@ body .container ul {
 }
 body .container ul .list-items {
   background-color: #fff;
-  color: midnightblue;
+  color: indigo;
   text-align: center;
   width: 100%;
   padding: 5px 0;
